[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.4"
dotenv = "0.15.0"
mysql = "24.0.0"
uuid = {version = "1.5.0", features =  [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

